@@ -4222,19 +4222,21 @@ name|IOException
 throws|,
 name|InterruptedException
 block|{
+name|CatalogTracker
+name|ct
+init|=
+name|getCatalogTracker
+argument_list|()
+decl_stmt|;
 name|boolean
 name|isRegionName
 init|=
 name|isRegionName
 argument_list|(
 name|tableNameOrRegionName
-argument_list|)
-decl_stmt|;
-name|CatalogTracker
+argument_list|,
 name|ct
-init|=
-name|getCatalogTracker
-argument_list|()
+argument_list|)
 decl_stmt|;
 try|try
 block|{
@@ -4312,6 +4314,17 @@ block|}
 block|}
 else|else
 block|{
+specifier|final
+name|String
+name|tableName
+init|=
+name|tableNameString
+argument_list|(
+name|tableNameOrRegionName
+argument_list|,
+name|ct
+argument_list|)
+decl_stmt|;
 name|List
 argument_list|<
 name|Pair
@@ -4329,12 +4342,7 @@ name|getTableRegionsAndLocations
 argument_list|(
 name|ct
 argument_list|,
-name|Bytes
-operator|.
-name|toString
-argument_list|(
-name|tableNameOrRegionName
-argument_list|)
+name|tableName
 argument_list|)
 decl_stmt|;
 for|for
@@ -4607,6 +4615,8 @@ condition|(
 name|isRegionName
 argument_list|(
 name|tableNameOrRegionName
+argument_list|,
+name|ct
 argument_list|)
 condition|)
 block|{
@@ -4681,6 +4691,17 @@ block|}
 block|}
 else|else
 block|{
+specifier|final
+name|String
+name|tableName
+init|=
+name|tableNameString
+argument_list|(
+name|tableNameOrRegionName
+argument_list|,
+name|ct
+argument_list|)
+decl_stmt|;
 name|List
 argument_list|<
 name|Pair
@@ -4698,12 +4719,7 @@ name|getTableRegionsAndLocations
 argument_list|(
 name|ct
 argument_list|,
-name|Bytes
-operator|.
-name|toString
-argument_list|(
-name|tableNameOrRegionName
-argument_list|)
+name|tableName
 argument_list|)
 decl_stmt|;
 for|for
@@ -5115,6 +5131,8 @@ condition|(
 name|isRegionName
 argument_list|(
 name|tableNameOrRegionName
+argument_list|,
+name|ct
 argument_list|)
 condition|)
 block|{
@@ -5190,6 +5208,17 @@ block|}
 block|}
 else|else
 block|{
+specifier|final
+name|String
+name|tableName
+init|=
+name|tableNameString
+argument_list|(
+name|tableNameOrRegionName
+argument_list|,
+name|ct
+argument_list|)
+decl_stmt|;
 name|List
 argument_list|<
 name|Pair
@@ -5207,12 +5236,7 @@ name|getTableRegionsAndLocations
 argument_list|(
 name|ct
 argument_list|,
-name|Bytes
-operator|.
-name|toString
-argument_list|(
-name|tableNameOrRegionName
-argument_list|)
+name|tableName
 argument_list|)
 decl_stmt|;
 for|for
@@ -5397,7 +5421,7 @@ argument_list|)
 throw|;
 block|}
 block|}
-comment|/**    * @param tableNameOrRegionName Name of a table or name of a region.    * @return True if<code>tableNameOrRegionName</code> is *possibly* a region    * name else false if a verified tablename (we call {@link #tableExists(byte[])};    * else we throw an exception.    * @throws IOException    */
+comment|/**    * @param tableNameOrRegionName Name of a table or name of a region.    * @param ct A {@link #CatalogTracker} instance (caller of this method usually has one).    * @return True if<code>tableNameOrRegionName</code> is a verified region    * name (we call {@link #MetaReader.getRegion(CatalogTracker catalogTracker,    * byte [] regionName)};) else false.    * Throw an exception if<code>tableNameOrRegionName</code> is null.    * @throws IOException    */
 specifier|private
 name|boolean
 name|isRegionName
@@ -5406,6 +5430,9 @@ specifier|final
 name|byte
 index|[]
 name|tableNameOrRegionName
+parameter_list|,
+name|CatalogTracker
+name|ct
 parameter_list|)
 throws|throws
 name|IOException
@@ -5426,11 +5453,69 @@ argument_list|)
 throw|;
 block|}
 return|return
-operator|!
-name|tableExists
+operator|(
+name|MetaReader
+operator|.
+name|getRegion
 argument_list|(
+name|ct
+argument_list|,
 name|tableNameOrRegionName
 argument_list|)
+operator|!=
+literal|null
+operator|)
+return|;
+block|}
+comment|/**    * Convert the table name byte array into a table name string and check if table    * exists or not.    * @param tableNameBytes Name of a table.    * @param ct A {@link #CatalogTracker} instance (caller of this method usually has one).    * @return tableName in string form.    * @throws IOException if a remote or network exception occurs.    * @throws TableNotFoundException if table does not exist.    */
+specifier|private
+name|String
+name|tableNameString
+parameter_list|(
+specifier|final
+name|byte
+index|[]
+name|tableNameBytes
+parameter_list|,
+name|CatalogTracker
+name|ct
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+name|String
+name|tableNameString
+init|=
+name|Bytes
+operator|.
+name|toString
+argument_list|(
+name|tableNameBytes
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+operator|!
+name|MetaReader
+operator|.
+name|tableExists
+argument_list|(
+name|ct
+argument_list|,
+name|tableNameString
+argument_list|)
+condition|)
+block|{
+throw|throw
+operator|new
+name|TableNotFoundException
+argument_list|(
+name|tableNameString
+argument_list|)
+throw|;
+block|}
+return|return
+name|tableNameString
 return|;
 block|}
 comment|/**    * Shuts down the HBase cluster    * @throws IOException if a remote or network exception occurs    */
