@@ -567,6 +567,125 @@ annotation|@
 name|Test
 specifier|public
 name|void
+name|testSplitFlushCompactUnknownTable
+parameter_list|()
+throws|throws
+name|InterruptedException
+block|{
+specifier|final
+name|String
+name|unknowntable
+init|=
+literal|"fubar"
+decl_stmt|;
+name|Exception
+name|exception
+init|=
+literal|null
+decl_stmt|;
+try|try
+block|{
+name|this
+operator|.
+name|admin
+operator|.
+name|compact
+argument_list|(
+name|unknowntable
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|IOException
+name|e
+parameter_list|)
+block|{
+name|exception
+operator|=
+name|e
+expr_stmt|;
+block|}
+name|assertTrue
+argument_list|(
+name|exception
+operator|instanceof
+name|TableNotFoundException
+argument_list|)
+expr_stmt|;
+name|exception
+operator|=
+literal|null
+expr_stmt|;
+try|try
+block|{
+name|this
+operator|.
+name|admin
+operator|.
+name|flush
+argument_list|(
+name|unknowntable
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|IOException
+name|e
+parameter_list|)
+block|{
+name|exception
+operator|=
+name|e
+expr_stmt|;
+block|}
+name|assertTrue
+argument_list|(
+name|exception
+operator|instanceof
+name|TableNotFoundException
+argument_list|)
+expr_stmt|;
+name|exception
+operator|=
+literal|null
+expr_stmt|;
+try|try
+block|{
+name|this
+operator|.
+name|admin
+operator|.
+name|split
+argument_list|(
+name|unknowntable
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|IOException
+name|e
+parameter_list|)
+block|{
+name|exception
+operator|=
+name|e
+expr_stmt|;
+block|}
+name|assertTrue
+argument_list|(
+name|exception
+operator|instanceof
+name|TableNotFoundException
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Test
+specifier|public
+name|void
 name|testDeleteEditUnknownColumnFamilyAndOrTable
 parameter_list|()
 throws|throws
